# ig_posts_parser_test_task

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: dependencies.py  main.py
src/routers/: __init__.py  instagram.py
